| Summary: | ASTERISK-30138: Compile failure in res_geolocation/geoloc_eprofile.c when optimization is enabled | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2022-07-13 13:37:31 | Date Closed: | 2022-07-13 15:19:10 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_geolocation |
| Versions: | GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | In function set_loc_src(), loc_src pointer was explicitly being set to '\0' instead of the _contents_ of the pointer. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2022-07-13 15:19:11.925-0500 Change 18822 merged by Kevin Harwell: geoloc_eprofile.c: Fix setting of loc_src in set_loc_src() [https://gerrit.asterisk.org/c/asterisk/+/18822|https://gerrit.asterisk.org/c/asterisk/+/18822] By: Friendly Automation (friendly-automation) 2022-07-13 15:19:28.908-0500 Change 18811 merged by Kevin Harwell: geoloc_eprofile.c: Fix setting of loc_src in set_loc_src() [https://gerrit.asterisk.org/c/asterisk/+/18811|https://gerrit.asterisk.org/c/asterisk/+/18811] By: Friendly Automation (friendly-automation) 2022-07-13 15:20:03.549-0500 Change 18813 merged by Kevin Harwell: geoloc_eprofile.c: Fix setting of loc_src in set_loc_src() [https://gerrit.asterisk.org/c/asterisk/+/18813|https://gerrit.asterisk.org/c/asterisk/+/18813] By: Friendly Automation (friendly-automation) 2022-07-13 15:20:22.455-0500 Change 18814 merged by Kevin Harwell: geoloc_eprofile.c: Fix setting of loc_src in set_loc_src() [https://gerrit.asterisk.org/c/asterisk/+/18814|https://gerrit.asterisk.org/c/asterisk/+/18814] By: Friendly Automation (friendly-automation) 2022-07-13 15:20:50.584-0500 Change 18812 merged by Kevin Harwell: geoloc_eprofile.c: Fix setting of loc_src in set_loc_src() [https://gerrit.asterisk.org/c/asterisk/+/18812|https://gerrit.asterisk.org/c/asterisk/+/18812] | ||